Not allowed perform sensitive operations via gremlin
Implement #145

Change-Id: I9a590fe40d3b5a808b569ed0af8fd83214a2941a